feat: create new login page and update login endpoint
